--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,7 @@ header {
 /* Nav bar start */
 
 .nav-bar {
+    display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 3.6rem 12rem 0rem 12rem;
@@ -20,8 +21,11 @@ header {
 }
 
 .nav-content ul {
-    display: flex;
     align-items: center;
+}
+
+.nav-content i {
+    display: none;
 }
 
 .nav-item {
