--- a/style/style.css
+++ b/style/style.css
@@ -1,16 +1,18 @@
 header {
     width: 100%;
-    height: 100vh;
+    max-height: 45rem;
     background: linear-gradient(180deg, rgb(0, 0, 0) 0%,rgba(119, 119, 119) 100%);
 }
 
 /* Nav bar start */
 
 .nav-bar {
+    width: 80%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 3.6rem 12rem 0rem 12rem;
+    margin: 0 auto;
+    padding-top: 3.6rem;
 }
 
 .fitness {
@@ -22,28 +24,144 @@ header {
 
 .nav-content ul {
     align-items: center;
+    box-sizing: border-box;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 39px;
+
 }
 
 .nav-content i {
     display: none;
 }
 
+.nav-content li {
+    list-style: none;
+}
+
 .nav-item {
     font-size: 1.5rem;
     font-weight: 400;
     color: var(--white-color);
-    list-style: none;
     margin-left: 3rem;
 }
 
-.nav-item button {
-    font-size: 1.5rem;
-    font-weight: 600;
-    color: var(--white-color);
-    background-color: var(--button-color);
-    border: none;
+.nav-content button {
     border-radius: 46px;
     padding: 0.5rem 1.25rem;
+    margin: 0.25rem 0px 0.25rem 0.25rem;
+}
+
+.nav-about {
+    margin: 0.75rem 1.5rem 0.75rem 3rem;
 }
 
 /* Nav bar end */
+
+/* Banner section start */
+.banner-container {
+    justify-content: space-between;
+    width: 80%;
+    margin: 0 auto;
+}
+
+.banner-left {
+    width: 50%;
+    margin-top: 6rem;
+}
+
+.banner-left h1 {
+    font-weight: 900;
+    font-size: 5rem;
+    color: var(--white-color);
+}
+
+.banner-left p {
+    font-weight: 400;
+    font-size: 1rem;
+    color: var(--description-color);
+    margin: 1.75rem 0rem;
+}
+#shape {
+    font-family: 'Miama', sans-serif;
+    font-weight: 400;
+    font-size: 5rem;                           
+}
+
+.banner-left button {
+    border-radius: 42px;
+    padding: 1rem 2.25rem;
+}
+
+#download-btn {
+    box-sizing: border-box;
+    border: 1px solid rgb(255, 255, 255);
+    background-color: rgb(17, 17, 17, 0.2);
+    margin-left: 0.75rem;
+}
+
+.banner-right img {
+    max-width: 22rem;
+    margin-top: 1.7rem;
+    position: relative;
+}
+
+#free-workout {
+    box-sizing: border-box;
+    border: 1px solid rgba(255, 255, 255, 0.05);
+    border-radius: 12px;
+    backdrop-filter: blur(20px);
+    background: rgba(255, 255, 255, 0.05);
+    position: absolute;
+    right: 5rem;
+    top: 18rem;
+}
+
+#free-workout h3 {
+    padding: 1rem 3.3rem 0.25rem 1.5rem;
+}
+
+#free-workout p {
+    font-weight: 400;
+    font-size: 0.75rem;
+    padding: 0.25rem 1.5rem 1rem 1.5rem;
+}
+
+.banner-right-video {
+    align-items: center;
+    padding-left: 1.4rem;
+    box-sizing: border-box;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 12px;
+    backdrop-filter: blur(20px);
+    background: rgba(17, 17, 17, 0.3);
+    position: absolute;
+    right: 24rem;
+    top: 34.75rem;
+}
+
+#youtube {
+    width: 2.5rem;
+    height: 2.5rem;
+    border-radius: 50%;
+    background-color: var(--button-color);
+}
+
+#youtube-triangle {
+    width: 0;
+	height: 0;
+	border-top: 0.5rem solid transparent;
+	border-left: 1rem solid #ffffff;
+	border-bottom: 0.5rem solid transparent;
+    position: relative;
+    left: 0.90rem;
+    top: 0.75rem;
+}
+
+#youtube-video h4 {
+    padding: 1.25rem 4rem 0.5rem 0.5rem;
+}
+
+#youtube-video p {
+    padding: 0rem 1.4rem 1.25rem 0.5rem;
+}
+/* Banner section end */
