--- a/style/default.css
+++ b/style/default.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url('https://fonts.cdnfonts.com/css/miama');
 
 * {
     margin: 0px;
@@ -19,4 +20,12 @@ body {
 
 .shared-display {
     display: flex;
+}
+
+.shared-button {
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: var(--white-color);
+    background-color: var(--button-color);
+    border: none;
 }
