--- a/style/responsive.css
+++ b/style/responsive.css
@@ -4,7 +4,14 @@
         flex-direction: column;
     }
 
+    header {
+        max-height: 100%;
+    }
+
+    /* Nav bar start */
+
     .nav-bar {
+        width: 90%;
         padding: 3.25rem 1.25rem 0rem 1.25rem;
     }
 
@@ -21,5 +28,71 @@
         font-size: 1.5rem;
         color: var(--white-color);
     }
+    /* Nav bar end */
+    /* Banner section start */
+    .banner-container {
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    .banner-left {
+        width: 100%;
+    }
+
+    .banner-left h1 {
+        width: 80%;
+        font-size: 2.25rem;
+    }
+
+    .banner-left p {
+        width: 70%;
+    }
+
+    .banner-left-btns {
+        display: flex;
+        width: 100%;
+    }
+
+    .banner-left button {
+        font-size: 1rem;
+    }
+
+    #download-btn {
+        font-size: 1rem;
+        padding: 0.75rem 1.5rem;
+    }
+
+    #free-workout {
+        right: 4.5rem;
+        top: 41rem;
+    }
+
+    #free-workout h3 {
+        font-size: 1.8rem;
+        padding: 0.75rem 2.5rem 0.2rem 1.1rem;
+    }
+
+    #free-workout p {
+        font-size: 0.6rem;
+        padding: 0rem 1rem 0.75rem 1.1rem;
+    }
+
+    .banner-right-video {
+        display: flex;
+        right: 15rem;
+        top: 55rem;
+        padding-left: 1rem;
+    }
+
+    #youtube-video h4 {
+        font-size: 1.1rem;
+        padding: 1rem 3rem 0.3rem 0.5rem;
+    }
+
+    #youtube-video p {
+        font-size: 0.75rem;
+        padding: 0rem 1rem 0.85rem 0.5rem;
+    }
+    /* Banner section end */
 
 } 
