--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,6 @@
 header {
     width: 100%;
-    max-height: 45rem;
+    max-height: 100%;
     background: linear-gradient(180deg, rgb(0, 0, 0) 0%,rgba(119, 119, 119) 100%);
 }
 
@@ -101,7 +101,9 @@ header {
 
 .banner-right img {
     max-width: 22rem;
-    margin-top: 1.7rem;
+    max-height: 100%;
+    margin-top: 2rem;
+    margin-bottom: -0.25rem;
     position: relative;
 }
 
@@ -112,11 +114,13 @@ header {
     backdrop-filter: blur(20px);
     background: rgba(255, 255, 255, 0.05);
     position: absolute;
-    right: 5rem;
-    top: 18rem;
+    right: 3.2rem;
+    top: 17rem;
 }
 
 #free-workout h3 {
+    font-weight: 900;
+    font-size: 2.5rem;
     padding: 1rem 3.3rem 0.25rem 1.5rem;
 }
 
@@ -127,6 +131,7 @@ header {
 }
 
 .banner-right-video {
+    display: flex;
     align-items: center;
     padding-left: 1.4rem;
     box-sizing: border-box;
@@ -136,7 +141,7 @@ header {
     background: rgba(17, 17, 17, 0.3);
     position: absolute;
     right: 24rem;
-    top: 34.75rem;
+    top: 35.5rem;
 }
 
 #youtube {
