--- a/style/root.css
+++ b/style/root.css
@@ -2,4 +2,5 @@
     --button-color: #E6533C;
     --white-color: #FFFFFF;
     --description-color: rgba(255, 255, 255, 0.4);
+    --black-color: #000000;
 }
