Our team section Responsive completed

--- a/style/responsive.css
+++ b/style/responsive.css
@@ -182,6 +182,10 @@
         width: 80%;
         grid-template-columns: repeat(1, 1fr);
     }
+
+    .hide {
+        display: none;
+    }
     /* Meet Our Team section end */
 
 } 
