Benefits section added

--- a/style/responsive.css
+++ b/style/responsive.css
@@ -187,5 +187,8 @@
         display: none;
     }
     /* Meet Our Team section end */
+    /* Benefits section start */
+    
+    /* Benefits section end */
 
 } 
