--- a/style/responsive.css
+++ b/style/responsive.css
@@ -200,7 +200,43 @@
     }
     /* Benefits section end */
     /* Footer section start */
+    .footer-main {
+        width: 90%;
+    }
 
+    .footer-container {
+        flex-direction: column;
+    }
+
+    #footer-heading {
+        margin-right: 0rem;
+    }
+
+    .footer-item {
+        width: 100%;
+        padding-bottom: 0rem;
+    }
+
+    .footer-item h4 {
+        font-size: 2rem;
+    }
+
+    .footer-item p {
+        font-size: 1.5rem;
+    }
+
+    #footer-heading p {
+        font-size: 0.88rem;
+    }
+
+    hr {
+        margin-top: 4rem;
+    }
+
+    #copyright {
+        text-align: left;
+        font-size: 1.25rem;
+    }
     /* Footer section end */
 
 } 
