--- a/style/style.css
+++ b/style/style.css
@@ -443,11 +443,11 @@ footer {
     margin-top: 4rem;
 }
 
-.footer-heading {
+#footer-heading {
     margin-right: 9rem;
 }
 
-.footer-heading h2 {
+#footer-heading h2 {
     color: var(--button-color);
 }
 
@@ -472,7 +472,7 @@ hr {
     border: 1px solid #313131;
 }
 
-.copyright {
+#copyright {
     text-align: center;
     margin-top: 2rem;
     padding-bottom: 1rem;
